[package]
name = "rss_with_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }

dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
open = "5.0.0"
reqwest = "0.11.20"
rss = "2.0.6"
regex = "1.9.5"
htmlentity = "1.3.1"


[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]
